...
                    AsyncImage(withURL: image.string, size: 90) { image in
                        viewModel.zoomedImage = image
                        viewModel.toogleZoomedImage()
                    }
                    .border(.gray, width: 1)
                    .padding()
                    .accessibilityLabel("ProductPicture")
                }
            }.padding()
        }
        List() {
            ForEach(viewModel.infoRows, id: \.id) { row in
                HStack (alignment: .center){
...
