...
                        LoadingView()
                    case .showingData:
                        ForEach(model.products, id: \.id) { product in
                            NavigationLink {
                                ProductView(viewModel: ProductViewModel(pId: product.id))
                            } label: {
                                ProductCell(value: product)
                                    .padding(0)
                                    .accessibilityLabel("ProductCell")
                            }
                        }
                    case .empty:
                        HStack(alignment: .center) {
...
